# proc-gen-bevy-thing

./: .gitmodules  Cargo.toml  README.md
.cargo/: config.toml
crates/lib/cpu/: Cargo.toml
crates/lib/cpu/src/: lib.rs
crates/lib/gpu/: Cargo.toml
